# openearable-ens001

./: .gitignore  CMakeLists.txt  Kconfig  README.md  cdc_acm_uart0_console.overlay  prj.conf  prj_esp32.conf  prj_fota.conf  sample.yaml  sysbuild_fota.conf  version.cmake  version.h.in  west.yml
.ESP32_test/: esp32-master-code.txt  esp32-slaver-code.txt
.github/workflows/: auto_rebase.yml  build_firmware.yaml  release_firmware.yaml
boards/: openearable_v2_nrf5340_cpuapp_fota.overlay
boards/teco/openearable_v2/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.openearable_v2  board.cmake  board.yml  board_init.c  mcuboot_hook.c  openearable_v2_nrf5340_cpuapp.dts  openearable_v2_nrf5340_cpuapp.yml  openearable_v2_nrf5340_cpuapp_common-pinctrl.dtsi  openearable_v2_nrf5340_cpuapp_common.dts  openearable_v2_nrf5340_cpuapp_defconfig  openearable_v2_nrf5340_cpuapp_esp32.overlay  openearable_v2_nrf5340_cpuapp_ns.dts  openearable_v2_nrf5340_cpuapp_ns.yml  openearable_v2_nrf5340_cpuapp_ns_defconfig  openearable_v2_nrf5340_cpunet-pinctrl.dtsi  openearable_v2_nrf5340_cpunet.dts  openearable_v2_nrf5340_cpunet.yml  (+3 more)
dts/bindings/: analog,adau1860.yaml  load-switch.yaml  power-switch.yaml  ti,bq25120a.yaml  ti,bq27220.yaml
include/: openearable_common.h  zbus_common.h
src/: openearable_common.c
src/Battery/: BQ25120a.cpp  BQ25120a.h  BQ27220.cpp  BQ27220.h  BootState.c  BootState.h  CMakeLists.txt  Kconfig  PowerManager.c  PowerManager.cpp  PowerManager.h
src/ParseInfo/: CMakeLists.txt  DefaultSensors.h  ParseType.h  README  SensorComponent.cpp  SensorComponent.h  SensorScheme.cpp  SensorScheme.h
src/SPI_esp32/: CMakeLists.txt  esp32_link.cpp  esp32_link.hpp
src/SensorManager/: Baro.cpp  Baro.h  BoneConduction.cpp  BoneConduction.h  CMakeLists.txt  EdgeMLSensor.cpp  EdgeMLSensor.h  IMU.cpp  IMU.h  Kconfig  Microphone.c  Microphone.cpp  Microphone.h  PPG.cpp  PPG.h  SensorManager.cpp  SensorManager.h  Temp.cpp  Temp.h
src/SensorManager/BMA580/: BMA580_Sensor.cpp  BMA580_Sensor.h  CMakeLists.txt  bma5.c  bma5_defs.h
src/SensorManager/BMP388/: Adafruit_BMP3XX.cpp  Adafruit_BMP3XX.h  CMakeLists.txt  bmp3.c
src/SensorManager/BMX160/: CMakeLists.txt  DFRobot_BMX160.cpp  DFRobot_BMX160.h
src/SensorManager/MAXM86161/: CMakeLists.txt  MAXM86161.cpp  MAXM86161.h
src/SensorManager/MLX90632/: CMakeLists.txt  MLX90632.cpp  MLX90632.h
src/Wire/: CMakeLists.txt  TWIM.cpp  TWIM.h  Wire.cpp  Wire.h
src/audio/: CMakeLists.txt  Equalizer.cpp  Equalizer.h  Kconfig  audio_datapath.c  audio_datapath.h  audio_system.c  audio_system.h  pdm_mic.c  pdm_mic.h  sdlogger_wrapper.cpp  sdlogger_wrapper.h  streamctrl.c  streamctrl.h  sw_codec_select.c
src/bluetooth/: CMakeLists.txt
src/buttons/: Button.cpp  Button.h  CMakeLists.txt  button_manager.c  button_manager.h  button_pressed.cpp
src/drivers/: ADAU1860.cpp  ADAU1860.h  CMakeLists.txt  Kconfig  Lark-eq.c  Lark-fdsp.c
src/drivers/LED_Controller/: CMakeLists.txt  KTD2026.cpp  KTD2026.h  LED.cpp  LED.h
src/modules/: CMakeLists.txt  audio_i2s.c  audio_i2s.h  audio_sync_timer.c  audio_sync_timer.h  button_assignments.h  hw_codec.h  hw_codec_adau1860.cpp  sd_card.h
src/utils/: CMakeLists.txt  StateIndicator.cpp  StateIndicator.h  channel_assignment.h  error_handler.c  nrf5340_audio_dk.c  openearable.c  openearable.h  uicr.c  uicr.h
sysbuild/ipc_radio/: prj.conf
sysbuild/mcuboot/: prj_fota.conf
tools/flash/: flash.sh  flash_fota.ps1  flash_fota.sh  mcumgr_upload.sh  recover.sh
unicast_server/: CMakeLists.txt  Kconfig.defaults  main.cpp
(+43 files in other folders)
